# kural

./: .env  .pre-commit-config.yaml  Cargo.toml  README.md  sqlx-prepare.sh
.github/workflows/: build.yml  release.yml
.sqlx/: query-1bd41691377ed3f5a38e6ee8bd2ba61e08cb1929a1928c754a776b848112ad46.json  query-1c63dd1fbf9afba5c643b52ea4e96a83448c7e3dae994dba2d1616ebee18f49e.json  query-2d1a8aad78e169f3aaafeafeeb645e259223eea6248349aca9a5d6ce29556df2.json  query-336a21d2a168351f305b0ef1f4ecadb949ef99eef61f1d14cd034f6a0c50adff.json  query-509f2d218ac470c006c22f0cc97d2bc30d19fa27cd178c8ef6e408b73892bb6b.json  query-73a6cb443e29e57b7f9d74b453dcae1f50ba23b9878335fc0a2c71583ac951ac.json  query-79e4267ad21887b3f1a3a63a33cc7843e6898ef059f25e94e44f0c83f0df8aa8.json  query-7e535a9c61fa0fc57a5e5ce06e486329dee10512b82a86747af612d43c129c44.json  query-9e73405172cefd826c9d5961281dfa6ec1235cfabccf06b3a8e2d9d1cd2f1642.json  query-a91f263f97f35ec6c115ecca3d412ec7591d763406223519e245d733af6e0ce7.json  query-cbea5b8212e3d9fc5d7352aaf045b66953e3eb511e1fea29b498fa8b74072085.json  query-daf4146db566ee7f4fa81c45ece09d5319c4939090f9dad18d47cc539f9a5ee2.json  query-e102743822699986bb0963f6e004136b73055fb4b6ec6f6f0aedde7e53a20b04.json  query-e1467ff36a13f572eefab0e3038fb7ca4472cdcb70b20cbd70cd366813753cef.json
src/: compute.rs  main.rs  solve.rs  types.rs
