[package]
name = "kural"
version = "0.1.0"
edition = "2021"

[dependencies]
eddn = "0.1.0"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
edsm-dumps-model = { version = "0.9.1" }
# edsm-dumps-model = { path = "/home/matt/workspace/edsm-dumps-model" }
# serde = { version = "1.0.216", features = ["derive"] }
# serde_json = "1.0.133"
indicatif = { version = "0.17.9", features = ["futures", "rayon", "tokio"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
color-eyre = "0.6.3"
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
geozero = { version = "0.14.0", features = ["with-postgis-postgres", "with-postgis-sqlx", "with-wkb"] }
elite_journal = { version = "0.2.2", features = ["geozero", "sqlx", "with-postgis-sqlx", "with-sqlx"] }
geo-types = { version = "0.7.14", features = ["approx", "multithreading", "serde"] }
good_lp = { version = "1.10.0", features = ["coin_cbc", "highs", "microlp", "scip"] }
rand = { version = "0.8.5", features = ["small_rng"] }
itertools = "0.13.0"
dashmap = { version = "6.1.0", features = ["inline"] }
ordered-float = "4.6.0"
lazy_static = "1.5.0"
cached = { version = "0.54.0", features = ["async", "disk_store"] }
rayon = "1.10.0"
regex = "1.11.1"
ansi_term = "0.12.1"
