[package]
name = "kural"
version = "1.0.0"
edition = "2021"

[profile.release]
debug = "line-tables-only"
lto = true
opt-level = "z"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
indicatif = { version = "0.17.9", features = ["futures", "rayon", "tokio"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
color-eyre = "0.6.3"
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
geozero = { version = "0.14.0", features = ["with-postgis-postgres", "with-postgis-sqlx", "with-wkb"] }
good_lp = { version = "1.10.0", features = ["highs"], default-features = false }
rand = { version = "0.8.5", features = ["small_rng"] }
itertools = "0.13.0"
dashmap = { version = "6.1.0", features = ["inline"] }
ordered-float = "4.6.0"
lazy_static = "1.5.0"
rayon = "1.10.0"
regex = "1.11.1"
owo-colors = "4.2.2"
thousands = "0.2.0"
chrono = "0.4.41"
chrono-humanize = "0.2.3"
count-digits = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
distances = "1.8.0"
